@@ -1,5 +1,10 @@
 2004-10-12  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimptemplateeditor.c: tweaked table spacings to get
+	the Height label aligned with the entry again.
+
+2004-10-12  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpprogressdialog.c (gimp_progress_dialog_new): set
 	the "skip_taskbar_hint" and "skip_pager_hint" properties on the
 	progress window.
